--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/tomatohammado/ga-dc-project-3-back-end/issues"
   },
-  "homepage": "https://github.com/tomatohammado/ga-dc-project-3-back-end#readme"
+  "homepage": "https://github.com/tomatohammado/ga-dc-project-3-back-end#readme",
+  "dependencies": {
+    "express": "^4.16.2",
+    "mongoose": "^5.0.2"
+  }
 }
